fix overflow issue

--- a/src/components/Metar.scss
+++ b/src/components/Metar.scss
@@ -47,7 +47,7 @@
   height: 500px;
   width: 100%;
   font-size: 15px;
-  overflow: auto;
+  overflow: overlay;
 
   &__banner {
     display: flex;
@@ -57,6 +57,14 @@
     border-bottom: solid black 1px;
     font-weight: bold;
     font-size: 18px;
+  }
+
+  &__button {
+    width: 20%;
+  }
+
+  &__block {
+    width: 20%;
   }
 }
 
